--- a/exercise_softmax-classifier.ipynb
+++ b/exercise_softmax-classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,16 @@
       "/home/leoroi/.local/lib/python3.6/site-packages/sklearn/utils/deprecation.py:77: DeprecationWarning: Function mldata_filename is deprecated; mldata_filename was deprecated in version 0.20 and will be removed in version 0.22\n",
       "  warnings.warn(msg, category=DeprecationWarning)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "70000"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -62,12 +72,13 @@
     "\n",
     "# shape of MNIST data\n",
     "print('digits', X.shape)\n",
-    "print('labels',y.shape)"
+    "print('labels',y.shape)\n",
+    "len(y[:, ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +147,7 @@
        "         0,   0,   0,   0], dtype=uint8)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +167,7 @@
        "(1083, 8, 8)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +266,7 @@
        "5925"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +316,7 @@
        " 54053]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +463,7 @@
     "    #      the score values for each class of  #\n",
     "    #      every digit.                        #\n",
     "    ############################################\n",
-    "    return theta.dot(X)"
+    "    return X.dot(theta)"
    ]
   },
   {
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,39 +512,104 @@
     "    #      L_i                                 #\n",
     "    ############################################\n",
     "    \n",
-    "    acc = []\n",
-    "    for prob, onehot in class_probabilities, onehot_encode_label:\n",
-    "        acc += [prob * onehot]\n",
+    "#     acc = []\n",
+    "#     for prob, onehot in class_probabilities, onehot_encode_label:\n",
+    "#         acc += [prob * onehot]\n",
     "    \n",
-    "    return acc    "
+    "#     return acc    \n",
+    "    return onehot_encode_label.dot(class_probabilities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leoroi/.local/lib/python3.6/site-packages/sklearn/preprocessing/_encoders.py:363: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(70000, 10)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# onehot_encode_label test\n",
+    "onehot_encode_label(y[:, ]).shape\n",
+    "# >> matrix N x C_lassesNr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 1.])"
+       "10"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# https://en.wikipedia.org/wiki/Softmax_function\n",
-    "z = [1000, 2000, 3000]\n",
-    "softmax(z)\n",
-    "# softmax_not_stable(z)"
+    "z = [1000, 2000, 3000, 1000, 2000, 3000, 1000, 2000, 3000, 1000]\n",
+    "softmax(z).shape[0]\n",
+    "# softmax_not_stable(z)\n",
+    "\n",
+    "# >> array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leoroi/.local/lib/python3.6/site-packages/sklearn/preprocessing/_encoders.py:363: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_loss(softmax(z), onehot_encode_label(y[:, ]))[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +637,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,11 +660,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loss(X, y, theta, lam):\n",
+    "    '''\n",
+    "    digits X (70000, 784) DxN\n",
+    "    labels y (70000,)\n",
+    "    theta W_eights CxD 784x10?\n",
+    "    lam reg strength\n",
+    "    '''\n",
     "    encoded_labels = onehot_encode_label(y)           # also needed for the gradient, therefore separated calculated\n",
     "    probabilities = softmax(class_scores(X,theta))    # also needed for the gradient, therefore separated calculated\n",
     "    loss_Li = data_loss(probabilities,encoded_labels) \n",
@@ -609,6 +691,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def softmax_loss_naive(X, y, W, reg):\n",
+    "def loss_full(X, y, W, reg):\n",
+    "    \"\"\"\n",
+    "    Softmax loss function, naive implementation (with loops)\n",
+    "    Inputs:\n",
+    "    - W: C x D array of weights\n",
+    "    - X: D x N array of data. Data are D-dimensional columns\n",
+    "    - y: 1-dimensional array of length N with labels 0...K-1, for K classes\n",
+    "    - reg: (float) regularization strength\n",
+    "    Returns:\n",
+    "    a tuple of:\n",
+    "    - loss as single float\n",
+    "    - gradient with respect to weights W, an array of same size as W\n",
+    "    \"\"\"\n",
+    "    # Initialize the loss and gradient to zero.\n",
+    "    loss = 0.0\n",
+    "    dW = np.zeros_like(W)\n",
+    "\n",
+    "    #############################################################################\n",
+    "    # Compute the softmax loss and its gradient using explicit loops.           #\n",
+    "    # Store the loss in loss and the gradient in dW. If you are not careful     #\n",
+    "    # here, it is easy to run into numeric instability. Don't forget the        #\n",
+    "    # regularization!                                                           #\n",
+    "    #############################################################################\n",
+    "\n",
+    "    # Get shapes\n",
+    "    num_classes = W.shape[0]\n",
+    "    num_train = X.shape[1]\n",
+    "\n",
+    "    for i in range(num_train):\n",
+    "        # Compute vector of scores (each col separately)\n",
+    "        f_i = W.dot(X[:, i]) # in R^{num_classes}\n",
+    "\n",
+    "        # Normalization trick to avoid numerical instability, per http://cs231n.github.io/linear-classify/#softmax\n",
+    "        log_c = np.max(f_i)\n",
+    "        f_i -= log_c\n",
+    "\n",
+    "        # Compute loss (and add to it, divided later)\n",
+    "        # L_i = - f(x_i)_{y_i} + log \\sum_j e^{f(x_i)_j}\n",
+    "        sum_i = 0.0\n",
+    "        for f_i_j in f_i:\n",
+    "            sum_i += np.exp(f_i_j)\n",
+    "        loss += -f_i[y[i]] + np.log(sum_i)\n",
+    "\n",
+    "        # Compute gradient\n",
+    "        # dw_j = 1/num_train * \\sum_i[x_i * (p(y_i = j)-Ind{y_i = j} )]\n",
+    "        # Here we are computing the contribution to the inner sum for a given i.\n",
+    "        for j in range(num_classes):\n",
+    "            p = np.exp(f_i[j])/sum_i\n",
+    "            dW[j, :] += (p-(j == y[i])) * X[:, i]\n",
+    "\n",
+    "    # Compute average\n",
+    "    loss /= num_train\n",
+    "    dW /= num_train\n",
+    "\n",
+    "    # Regularization\n",
+    "    loss += 0.5 * reg * np.sum(W * W)\n",
+    "    dW += reg*W\n",
+    "\n",
+    "    return loss, dW"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -617,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +791,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784, 10)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = np.zeros([X_train.shape[1],len(np.unique(y_train))])\n",
+    "w.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -650,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +831,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-7ed565fad50c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# check loss after last iteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'last iteration loss:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_history\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# Sanity check: first loss should be ln(10)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'first iteration loss:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_history\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Plot a loss curve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-21-7ed565fad50c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# check loss after last iteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'last iteration loss:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_history\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# Sanity check: first loss should be ln(10)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'first iteration loss:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_history\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Plot a loss curve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -668,8 +839,10 @@
    "source": [
     "# check loss after last iteration\n",
     "print('last iteration loss:',loss_history[-1])\n",
+    "\n",
     "# Sanity check: first loss should be ln(10)\n",
     "print('first iteration loss:',loss_history[0])\n",
+    "\n",
     "# Plot a loss curve\n",
     "plt.plot(loss_history)\n",
     "plt.ylabel('loss')\n",
