data split ration

--- a/exercise_softmax-classifier.ipynb
+++ b/exercise_softmax-classifier.ipynb
@@ -423,6 +423,7 @@
    "outputs": [],
    "source": [
     "# split data into training and test set\n",
+    "# 6:1 ration\n",
     "X_train, X_test, y_train, y_test = X[:60000], X[60000:], y[:60000], y[60000:]\n",
     "\n",
     "# shuffle training data\n",
