--- a/exercise-backprop.ipynb
+++ b/exercise-backprop.ipynb
@@ -633,6 +633,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"backprop.jpeg\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Implement the Example\n",
     "In the pen and paper exercise, you calculated the partial derivatives for some specific values of $a$, $b$, and $c$ of the graph $f(a,b,c)$. Your task now is to generalize that solution. Implement the used functions $+$, $*$ and $1/x$ and their derivatives. Chain the functions to calculate $f(a,b,c)$ in a forward pass and $ \\frac {\\partial out} {\\partial a}$, $ \\frac {\\partial out} {\\partial b}$, $ \\frac {\\partial out} {\\partial c}$ in the backward pass for arbitrary values of $a$, $b$, and $c$.\n"
    ]
