--- a/exercise_softmax-classifier.ipynb
+++ b/exercise_softmax-classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "70000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "         0,   0,   0,   0], dtype=uint8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "(1083, 8, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "5925"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        " 54053]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "(70000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "       [nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,28 @@
        "(784, 10)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# weight matrix\n",
+    "opt_model.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784, 10)"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +781,7 @@
      "output_type": "stream",
      "text": [
       "first iteration loss: 2.3025850929940437\n",
-      "last iteration loss: 0.5220370281514659\n"
+      "last iteration loss: 0.522037028151466\n"
      ]
     },
     {
@@ -769,7 +790,7 @@
        "Text(0.5, 0, 'iterations')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -906,16 +927,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9d5a32c358>"
+       "<matplotlib.image.AxesImage at 0x7f4440f650f0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -938,10 +959,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Confusion Matrix: \n",
+      "[[ 951    0    2    2    0    3   13    1    8    0]\n",
+      " [   0 1094    4    4    1    1    4    0   27    0]\n",
+      " [  14   14  855   25   18    0   24   25   49    8]\n",
+      " [   6    1   19  881    1   37    8   18   25   14]\n",
+      " [   3    8    5    0  886    1   14    2    7   56]\n",
+      " [  23   10    4   53   23  680   23    9   51   16]\n",
+      " [  19    3   12    2   13   18  882    0    9    0]\n",
+      " [   4   27   31    1   14    0    2  898    9   42]\n",
+      " [  10   11   13   38   11   23   16   15  823   14]\n",
+      " [  13   11   10   11   53   14    1   28   11  857]]\n",
+      "\n",
+      "Panda Confusion Matrix: \n",
+      "Predicted     0     1    2     3     4    5    6    7     8     9    All\n",
+      "Actual                                                                  \n",
+      "0.0         951     0    2     2     0    3   13    1     8     0    980\n",
+      "1.0           0  1094    4     4     1    1    4    0    27     0   1135\n",
+      "2.0          14    14  855    25    18    0   24   25    49     8   1032\n",
+      "3.0           6     1   19   881     1   37    8   18    25    14   1010\n",
+      "4.0           3     8    5     0   886    1   14    2     7    56    982\n",
+      "5.0          23    10    4    53    23  680   23    9    51    16    892\n",
+      "6.0          19     3   12     2    13   18  882    0     9     0    958\n",
+      "7.0           4    27   31     1    14    0    2  898     9    42   1028\n",
+      "8.0          10    11   13    38    11   23   16   15   823    14    974\n",
+      "9.0          13    11   10    11    53   14    1   28    11   857   1009\n",
+      "All        1043  1179  955  1017  1020  777  987  996  1019  1007  10000\n",
+      "\n",
+      "My F1 Score: \n",
+      "[0.94018784 0.94554883 0.86059386 0.86926492 0.88511489 0.8148592\n",
+      " 0.90694087 0.88735178 0.82589062 0.85019841]\n",
+      "\n",
+      "Sklearn F1 Score: \n",
+      "[0.94018784 0.94554883 0.86059386 0.86926492 0.88511489 0.8148592\n",
+      " 0.90694087 0.88735178 0.82589062 0.85019841]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def confusionMatrix(X,y,theta):\n",
+    "    probabilities = softmax(class_scores(X,theta))\n",
+    "    y_pred = np.argmax(probabilities,axis=1)\n",
+    "    y = y.astype(np.int64)\n",
+    "    \n",
+    "    size = len(np.unique(y))\n",
+    "    conf_matrix = np.zeros((size,size), dtype=np.int)\n",
+    "\n",
+    "    for i in range (len(y)):\n",
+    "        conf_matrix[y[i]][y_pred[i]] += 1\n",
+    "    return conf_matrix\n",
+    "\n",
+    "import pandas as pd\n",
+    "def confusionMatrix2(X,y,theta):                     #Just for test   \n",
+    "    probabilities = softmax(class_scores(X,theta))\n",
+    "    y_pred = np.argmax(probabilities,axis=1)\n",
+    "    return pd.crosstab(y, y_pred, rownames=['Actual'], colnames=['Predicted'], margins=True)\n",
+    "\n",
+    "def f1Score(confMatrix):   #harmonic average of the precision and recall\n",
+    "    TP = np.diag(confMatrix)\n",
+    "    FP = np.sum(cm, axis=0) - TP\n",
+    "    FN = np.sum(cm, axis=1) - TP\n",
+    "    TN = []\n",
+    "    \n",
+    "    for i in range(len(confMatrix)):\n",
+    "        temp = np.delete(confMatrix, i, 0)    # delete ith row\n",
+    "        temp = np.delete(temp, i, 1)  # delete ith column\n",
+    "        TN.append(sum(sum(temp)))\n",
+    "    \n",
+    "    precision = TP/(TP+FP)\n",
+    "    recall = TP/(TP+FN)\n",
+    "\n",
+    "    return 2 * (precision * recall) / (precision + recall)\n",
+    "    ############################################\n",
+    "    #             END OF YOUR CODE             #\n",
+    "    ############################################ \n",
+    "\n",
+    "print(\"My Confusion Matrix: \")\n",
+    "cm=confusionMatrix(X_test,y_test,opt_model)\n",
+    "print(cm)\n",
+    "print()\n",
+    "print(\"Panda Confusion Matrix: \")\n",
+    "print(confusionMatrix2(X_test,y_test,opt_model))\n",
+    "print()\n",
+    "print(\"My F1 Score: \")\n",
+    "print(f1Score(cm))\n",
+    "print()\n",
+    "print(\"Sklearn F1 Score: \")\n",
+    "probabilities = softmax(class_scores(X_test,opt_model))\n",
+    "y_pred = np.argmax(probabilities,axis=1)\n",
+    "from sklearn.metrics import f1_score\n",
+    "f2 = f1_score(y_test, y_pred, average=None)\n",
+    "print(f2)"
+   ]
   }
  ],
  "metadata": {
